--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ ga('send', 'pageview');
 				<p>OOP / MVC<br>Mocha / Chai / Sinon / Eslint<br>Gulp / webpack</p>
 
 				<h5 class="mt-5 skill-head">WHAT I USE</h5>
-				<p>Webstorm / Sublime Text 3 / Elipse<br> Ubuntu 16.04 / Windows 8.1</p>
+				<p>Webstorm / Sublime Text 3 / Eclipse<br> Ubuntu 16.04 / Windows 8.1</p>
 
 			</div>
 		</div>
