--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@ ga('send', 'pageview');
 					</a>
 
 					<a class="mr-3 tips" title="UVa OJ" target="_blank" href="http://uhunt.onlinejudge.org/id/381603">
-						<img src="img/uva.png" width="16" height="15" >
+						<img src="img/uva.png" width="19" height="18" >
 					</a>
-					
+
 				</div>
+
+				<h6 class="skill-head mt-5 text-center">"Ideas are bulletproof" - V </h6>
 
 				<ul class="nav justify-content-center my-nav">
 				  <li class="nav-item">
@@ -80,9 +82,11 @@ ga('send', 'pageview');
 			</div>
 		</div>
 
-		<div class="page-section row pt-3" id="about-section" style="background: #21364b; color: #869bb0;">
-			<div class="container-fluid text-center" style="width: 600px;">
+		<!-- ABOUT SECTION -->
+		<div class="page-section row pt-3" id="about-section" style="background: #21364b; color: #b1c0cd;">
+			<div class="container-fluid text-center" style="width: 700px;">
 				<h1 class="section-header section-header-dark">About</h1>
+
 				<p class="mb-0">BSc. in Computer Science and Engineering</p>
 				<p>Jessore University of Science & Technology</p>
 
@@ -93,11 +97,10 @@ ga('send', 'pageview');
 				<p class="m-0">Machine Learning</p>
 				<p class="m-0">Artificial Intelliegene</p>
 				<p>Compiler Design</p>
-
-
 			</div>
 		</div>
 
+		<!-- SKILLSS SECTION -->
 		<div class="page-section row pt-2 pb-3" id="skills-section">
 			<div class="container-fluid text-center" style="width: 600px;">
 				<h1 class="section-header">Skilss</h1>
@@ -121,6 +124,7 @@ ga('send', 'pageview');
 		</div>
 
 
+		<!-- PROJECTS SECTION -->
 		<div class="page-section row pt-3 pb-5" id="projects-section" style="background: #21364b; color: #869bb0;">
 			<div class="container-fluid text-center" style="width: 600px;">
 				<h1 class="section-header section-header-dark">Projects</h1>
@@ -172,7 +176,9 @@ ga('send', 'pageview');
 
 			</div>
 		</div>
- 
+
+
+		<!-- FEEDBACKS SECTION -->
 		<div class="page-section row pt-2 pb-3" id="feedbacks-section" style="background: #679895; color: #fff;">
 			<div class="container-fluid text-center" style="width: 900px;">
 				<h1 class="section-header">Feedbacks</h1>
