--- a/index.html
+++ b/index.html
@@ -60,8 +60,6 @@ ga('send', 'pageview');
 
 				</div>
 
-				<h6 class="skill-head mt-5 text-center">"Ideas are bulletproof" - V </h6>
-
 				<ul class="nav justify-content-center my-nav">
 				  <li class="nav-item">
 				    <a class="nav-link active" href="#about-section">ABOUT</a>
@@ -77,6 +75,10 @@ ga('send', 'pageview');
 				  <li class="nav-item nav-sep">/</li>
 				  <li class="nav-item">
 				    <a class="nav-link" href="#feedbacks-section">FEEDBACKS</a>
+				  </li>
+				  <li class="nav-item nav-sep">/</li>
+				  <li class="nav-item">
+				    <a target="_blank" class="nav-link" href="http://blog.ahmeddinar.me/">BLOG</a>
 				  </li>
 				</ul>
 			</div>
@@ -123,59 +125,155 @@ ga('send', 'pageview');
 			</div>
 		</div>
 
-
 		<!-- PROJECTS SECTION -->
-		<div class="page-section row pt-3 pb-5" id="projects-section" style="background: #21364b; color: #869bb0;">
-			<div class="container-fluid text-center" style="width: 600px;">
-				<h1 class="section-header section-header-dark">Projects</h1>
+		<div class="page-section row pt-3 pb-5" id="projects-section" style="background: #3B5998; color: #fff;">
 
-				<div class="mb-5">
-					<h5 class="project-head"><a href="https://github.com/ahmed-dinar/JustOJ">Online Judge System</a></h5>
-					<p class="date">Oct 2015 - Present</p>
+			<div class="container">
+
+				<h1 class="text-center section-header">Projects</h1>
+
+				<div class="row mb-4 mt-5">
+					<div class="col d-flex justify-content-center">
+						<div class="card project-card">
+						  <div class="card-body">
+						    <h5 class="card-title">Online Judge System</h5>
+						    <p class="card-text date">Oct 2015 - Present</p>
+						    <p class="card-text technology">NodeJS, C, C++, MySQL, Redis, VueJS, Bootstrap</p>
+						    <p class="card-text desc">An Online Judge System for organizing and hosting programming contest. Currently supports C, C++ & JAVA.</p>
+						    <a target="_blank" href="http://justoj.org/">http://justoj.org/</a>
+						  </div>
+						</div>
+					</div>
+
+					<div class="col d-flex justify-content-center">
+						<div class="card project-card">
+						  <div class="card-body">
+						    <h5 class="card-title">Codeforces CLI</h5>
+						    <p class="card-text date">Oct 2016 - Present</p>
+						    <p class="card-text technology">NodeJS</p>
+						    <p class="card-text desc">A command line tool for Codeforces coders.</p>
+						    <a target="_blank" class="mr-2" href="https://github.com/ahmed-dinar/codeforces-cli">
+						    	<i class="fa fa-external-link" aria-hidden="true"></i>
+						    </a>
+						    <a target="_blank" href="https://github.com/ahmed-dinar/codeforces-cli">
+						    	<i class="fa fa-github" aria-hidden="true"></i>
+						    </a>
+						  </div>
+						</div>
+					</div>
+
+					<div class="col d-flex justify-content-center">
+						<div class="card project-card">
+						  <div class="card-body">
+						    <h5 class="card-title">Codeforces API Node</h5>
+						    <p class="card-text date">Sep 2016 – Oct 2016</p>
+						    <p class="card-text technology">NodeJS</p>
+						    <p class="card-text desc">Codeforces API Client Library for Node.js as a npm package.</p>
+						    <a target="_blank" class="mr-2" href="https://www.npmjs.com/package/codeforces-api">
+						    	<i class="fa fa-external-link" aria-hidden="true"></i>
+						    </a>
+						    <a target="_blank" href="https://github.com/ahmed-dinar/codeforces-api-node">
+						    	<i class="fa fa-github" aria-hidden="true"></i>
+						    </a>
+						  </div>
+						</div>
+					</div>
 				</div>
 
-				<div class="mb-5">
-					<h5 class="project-head"><a href="https://github.com/ahmed-dinar/codeforces-cli">Codeforces CLI</a></h5>
-					<p class="date">Oct 2016 - Present</p>
+				<div class="row mb-4">
+					<div class="col d-flex justify-content-center">
+						<div class="card project-card">
+						  <div class="card-body">
+						    <h5 class="card-title">Website for school and college</h5>
+						    <p class="card-text date">May 2017 – Jun 2017</p>
+						    <p class="card-text technology">PHP, MySQL, Bootstrap, Jquery</p>
+						    <p class="card-text desc">School and college website with admin panel</p>
+						    <a target="_blank" href="https://www.bscollege.ac.bd/">https://www.bscollege.ac.bd/</a>
+						  </div>
+						</div>
+					</div>
+
+					<div class="col d-flex justify-content-center">
+						<div class="card project-card">
+						  <div class="card-body">
+						    <h5 class="card-title">Vuex Flash</h5>
+						    <p class="card-text date">Jul 2017 – Jul 2017</p>
+						    <p class="card-text technology">VueJS</p>
+						    <p class="card-text desc">Flash message component plugin for Vue.js within Vuex as a npm package.</p>
+						    <a target="_blank" class="mr-2" href="https://www.npmjs.com/package/vuex-flash">
+						    	<i class="fa fa-external-link" aria-hidden="true"></i>
+						    </a>
+						    <a target="_blank" href="https://github.com/ahmed-dinar/vuex-flash">
+						    	<i class="fa fa-github" aria-hidden="true"></i>
+						    </a>
+						  </div>
+						</div>
+					</div>
+
+					<div class="col d-flex justify-content-center">
+						<div class="card project-card">
+						  <div class="card-body">
+						    <h5 class="card-title">Online Admission System</h5>
+						    <p class="card-text date">Jul 2015 – Oct 2016</p>
+						    <p class="card-text technology">PHP, Javascript, MySQL, Bootstrap</p>
+						    <p class="card-text desc">University online admission system with focus on object oriented concepts and raw MVC pattern.</p>
+						    <a target="_blank" href="https://github.com/ahmed-dinar/Online-Admission-System">
+						    	<i class="fa fa-github" aria-hidden="true"></i>
+						    </a>
+						  </div>
+						</div>
+					</div>
 				</div>
 
-				<div class="mb-5">
-					<h5 class="project-head"><a href="https://github.com/ahmed-dinar/vuex-flash">Vuex Flash</a></h5>
-					<p class="date">Jul 2017 – Jul 2017</p>
+
+				<div class="row">
+					<div class="col d-flex justify-content-center">
+						<div class="card project-card">
+						  <div class="card-body">
+						    <h5 class="card-title">Meal Management System</h5>
+						    <p class="card-text date">Sep 2014 – Mar 2015</p>
+						    <p class="card-text technology">JAVA, SQLite</p>
+						    <p class="card-text desc">A desktop app for mess admin to keep track of monthly users & their individual meal expenditure.</p>
+						    <a target="_blank" href="https://github.com/ahmed-dinar/Meal-Management-System">
+						    	<i class="fa fa-github" aria-hidden="true"></i>
+						    </a>
+						  </div>
+						</div>
+					</div>
+
+					<div class="col d-flex justify-content-center">
+						<div class="card project-card">
+						  <div class="card-body">
+						    <h5 class="card-title">Bus Tracker</h5>
+						    <p class="card-text date">Jun 2016 – Jun 2016</p>
+						    <p class="card-text technology">Android, PHP</p>
+						    <p class="card-text desc">An android application to track another phone on a bus and live update in google maps.</p>
+						    <a target="_blank" href="https://github.com/ahmed-dinar/JUSTBusTrackerUpdater">
+						    	<i class="fa fa-github" aria-hidden="true"></i>
+						    </a>
+						  </div>
+						</div>
+					</div>
+
+					<div class="col d-flex justify-content-center">
+						<div class="card project-card">
+						  <div class="card-body">
+						    <h5 class="card-title">Sudoku Game</h5>
+						    <p class="card-text date">Aug 2014 – Sep 2014</p>
+						    <p class="card-text technology">C++, ncurses</p>
+						    <p class="card-text desc">A hard coded low level sudoku game in cli.</p>
+						    <a target="_blank" href="https://github.com/ahmed-dinar/sudoku-game">
+						    	<i class="fa fa-github" aria-hidden="true"></i>
+						    </a>
+						  </div>
+						</div>
+					</div>
 				</div>
 
-				<div class="mb-5">
-					<h5 class="project-head"><a href="https://github.com/ahmed-dinar/School-Website">Website for school and college</a></h5>
-					<p class="date">May 2017 – Jun 2017</p>
-				</div>
-
-				<div class="mb-5">
-					<h5 class="project-head"><a href="https://github.com/ahmed-dinar/codeforces-api-node">Codeforces API Node</a></h5>
-					<p class="date">Sep 2016 – Oct 2016</p>
-				</div>
-
-				<div class="mb-5">
-					<h5 class="project-head"><a href="https://github.com/ahmed-dinar/JUSTAS">Online Admission System</a></h5>
-					<p class="date">Jul 2015 – Oct 2016</p>
-				</div>
-
-				<div class="mb-5">
-					<h5 class="project-head"><a href="https://github.com/ahmed-dinar/JUSTBusTrackerUpdater">Bus Tracker</a></h5>
-					<p class="date">Jun 2016 – Jun 2016</p>
-				</div>
-
-				<div class="mb-5">
-					<h5 class="project-head"><a href="https://github.com/ahmed-dinar/Meal-Management-System">Meal Management System</a></h5>
-					<p class="date">Sep 2014 – Mar 2015</p>
-				</div>
-
-				<div class="mb-5">
-					<h5 class="project-head"><a href="https://github.com/ahmed-dinar/sudoku-game">Sudoku Game</a></h5>
-					<p class="date">Aug 2014 – Sep 2014</p>
-				</div>
 
 			</div>
 		</div>
+
 
 
 		<!-- FEEDBACKS SECTION -->
