--- a/index.html
+++ b/index.html
@@ -354,6 +354,11 @@ ga('send', 'pageview');
 		</div>
 
 	</div>
+
+	<a href="javascript:" id="return-to-top">
+		<i class="fa fa-angle-up" aria-hidden="true"></i>
+	</a>
+	
 </body>
 
 <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
@@ -361,3 +366,4 @@ ga('send', 'pageview');
 <script type="text/javascript" src="js/jquery.tipsy.js"></script>
 <script type="text/javascript" src="js/jquery.scrollTo.min.js"></script>
 <script type="text/javascript" src="js/portfolio.js"></script>
+<script type="text/javascript" src="js/jquery.nicescroll.min.js"></script>
