--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ ga('send', 'pageview');
 				<p>I would like to be a part of a passionate Software engineering team within an established/promising company where I can utilize my knowledge for the organization’s growth and gain quality experience. </p>
 
 				<label class="mt-5 skill-head">AREA OF INTEREST</label>
-				<p class="m-0">Machine Learning</p>
-				<p class="m-0">Artificial Intelliegene</p>
-				<p>Compiler Design</p>
+				<p class="m-0">Machine Learning & AI</p>
+				<p class="m-0">Operating System</p>
+				<p class="m-0">Compiler Design</p>
 			</div>
 		</div>
 
