--- a/index.html
+++ b/index.html
@@ -114,19 +114,22 @@ ga('send', 'pageview');
 				<h1 class="section-header">Skilss</h1>
 
 				<h5 class="skill-head">WEB</h5>
-				<p>JavaScript / jQuery / VueJS / ECMAScript 6 / EJS<br>HTML5 / CSS3</p>
+				<p>JavaScript / jQuery / VueJS / ES6<br>Bootstrap / HTML5 / CSS3</p>
 
 				<h5 class="mt-5 skill-head">BACKEND</h5>
-				<p>JAVA / Node.js / PHP / Express / C / C++</p>
+				<p>JAVA / Node.js / ES6 / PHP <br>Express / Socket.IO</p>
 
 				<h5 class="mt-5 skill-head">DATABASE</h5>
-				<p>MySQL / SQLite / Redis</p>
+				<p>MySQL / MongoDB / Mongoose / Redis</p>
 
 				<h5 class="mt-5 skill-head">OTHERS</h5>
 				<p>OOP / MVC<br>Mocha / Chai / Sinon / Eslint<br>Gulp / webpack</p>
 
 				<h5 class="mt-5 skill-head">WHAT I USE</h5>
-				<p>Webstorm / Sublime Text 3 / Eclipse<br> Ubuntu 16.04 / Windows 8.1</p>
+				<p>Webstorm / Sublime Text 3 / Eclipse / Atom IDE<br> Ubuntu 18.04 / macOS High Sierra / Windows 10</p>
+
+				<h5 class="mt-5 skill-head">VCS</h5>
+				<p>Git / Github / Bitbucket</p>
 
 			</div>
 		</div>
@@ -349,7 +352,7 @@ ga('send', 'pageview');
 		<div class="footer p-2">
 			<div class="text-center">
 				Site powered by github pages<br>
-				© 2017 Ahmed Dinar. All rights reserved.
+				© 2018 Ahmed Dinar. All rights reserved.
 			</div>
 		</div>
 
