update image, menu

--- a/index.html
+++ b/index.html
@@ -72,14 +72,10 @@ ga('send', 'pageview');
 				   <li class="nav-item nav-sep">/</li>
 				  <li class="nav-item">
 				    <a class="nav-link active" href="#about-section">ABOUT</a>
-				  </li>
+					</li>
 				  <li class="nav-item nav-sep">/</li>
 				  <li class="nav-item">
 				    <a class="nav-link" href="#skills-section">SKILLS</a>
-				  </li>
-				  <li class="nav-item nav-sep">/</li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="#projects-section">PROJECTS</a>
 				  </li>
 				  <li class="nav-item nav-sep">/</li>
 				  <li class="nav-item">
@@ -108,13 +104,15 @@ ga('send', 'pageview');
 			</div>
 		</div>
 
+
+
 		<!-- SKILLSS SECTION -->
 		<div class="page-section row pt-2 pb-3" id="skills-section">
 			<div class="container-fluid text-center" style="width: 600px;">
 				<h1 class="section-header">Skilss</h1>
 
 				<h5 class="skill-head">WEB</h5>
-				<p>JavaScript / jQuery / VueJS / ES6<br>Bootstrap / HTML5 / CSS3</p>
+				<p>JavaScript / jQuery / VueJS / ES6<br>Bootstrap / HTML5 / CSS3<br>Gulp / webpack</p>
 
 				<h5 class="mt-5 skill-head">BACKEND</h5>
 				<p>JAVA / Node.js / ES6 / PHP <br>Express / Socket.IO</p>
@@ -123,162 +121,10 @@ ga('send', 'pageview');
 				<p>MySQL / MongoDB / Mongoose / Redis</p>
 
 				<h5 class="mt-5 skill-head">OTHERS</h5>
-				<p>OOP / MVC<br>Mocha / Chai / Sinon / Eslint<br>Gulp / webpack</p>
-
-				<h5 class="mt-5 skill-head">WHAT I USE</h5>
-				<p>Webstorm / Sublime Text 3 / Eclipse / Atom IDE<br> Ubuntu 18.04 / macOS High Sierra / Windows 10</p>
+				<p>OOP / MVC<br>Firebase / AWS / Geolocation / Google maps api</p>
 
 				<h5 class="mt-5 skill-head">VCS</h5>
 				<p>Git / Github / Bitbucket</p>
-
-			</div>
-		</div>
-
-		<!-- PROJECTS SECTION -->
-		<div class="page-section row pt-3 pb-5" id="projects-section" style="background: #3B5998; color: #fff;">
-
-			<div class="container">
-
-				<h1 class="text-center section-header">Projects</h1>
-
-				<div class="row mb-4 mt-5">
-					<div class="col d-flex justify-content-center">
-						<div class="card project-card">
-						  <div class="card-body">
-						    <h5 class="card-title">Online Judge System</h5>
-						    <p class="card-text date">Oct 2015 - Present</p>
-						    <p class="card-text technology">NodeJS, C, C++, MySQL, Redis, VueJS, Bootstrap</p>
-						    <p class="card-text desc">An Online Judge System for organizing and hosting programming contest. Currently supports C, C++ & JAVA.</p>
-						    <a target="_blank" href="http://justoj.org/">http://justoj.org/</a>
-						  </div>
-						</div>
-					</div>
-
-					<div class="col d-flex justify-content-center">
-						<div class="card project-card">
-						  <div class="card-body">
-						    <h5 class="card-title">Codeforces CLI</h5>
-						    <p class="card-text date">Oct 2016 - Present</p>
-						    <p class="card-text technology">NodeJS</p>
-						    <p class="card-text desc">A command line tool for Codeforces coders.</p>
-						    <a target="_blank" class="mr-2" href="https://github.com/ahmed-dinar/codeforces-cli">
-						    	<i class="fa fa-external-link" aria-hidden="true"></i>
-						    </a>
-						    <a target="_blank" href="https://github.com/ahmed-dinar/codeforces-cli">
-						    	<i class="fa fa-github" aria-hidden="true"></i>
-						    </a>
-						  </div>
-						</div>
-					</div>
-
-					<div class="col d-flex justify-content-center">
-						<div class="card project-card">
-						  <div class="card-body">
-						    <h5 class="card-title">Codeforces API Node</h5>
-						    <p class="card-text date">Sep 2016 – Oct 2016</p>
-						    <p class="card-text technology">NodeJS</p>
-						    <p class="card-text desc">Codeforces API Client Library for Node.js as a npm package.</p>
-						    <a target="_blank" class="mr-2" href="https://www.npmjs.com/package/codeforces-api">
-						    	<i class="fa fa-external-link" aria-hidden="true"></i>
-						    </a>
-						    <a target="_blank" href="https://github.com/ahmed-dinar/codeforces-api-node">
-						    	<i class="fa fa-github" aria-hidden="true"></i>
-						    </a>
-						  </div>
-						</div>
-					</div>
-				</div>
-
-				<div class="row mb-4">
-					<div class="col d-flex justify-content-center">
-						<div class="card project-card">
-						  <div class="card-body">
-						    <h5 class="card-title">Website for school and college</h5>
-						    <p class="card-text date">May 2017 – Jun 2017</p>
-						    <p class="card-text technology">PHP, MySQL, Bootstrap, Jquery</p>
-						    <p class="card-text desc">School and college website with admin panel</p>
-						    <a target="_blank" href="https://www.bscollege.ac.bd/">https://www.bscollege.ac.bd/</a>
-						  </div>
-						</div>
-					</div>
-
-					<div class="col d-flex justify-content-center">
-						<div class="card project-card">
-						  <div class="card-body">
-						    <h5 class="card-title">Vuex Flash</h5>
-						    <p class="card-text date">Jul 2017 – Jul 2017</p>
-						    <p class="card-text technology">VueJS</p>
-						    <p class="card-text desc">Flash message component plugin for Vue.js within Vuex as a npm package.</p>
-						    <a target="_blank" class="mr-2" href="https://www.npmjs.com/package/vuex-flash">
-						    	<i class="fa fa-external-link" aria-hidden="true"></i>
-						    </a>
-						    <a target="_blank" href="https://github.com/ahmed-dinar/vuex-flash">
-						    	<i class="fa fa-github" aria-hidden="true"></i>
-						    </a>
-						  </div>
-						</div>
-					</div>
-
-					<div class="col d-flex justify-content-center">
-						<div class="card project-card">
-						  <div class="card-body">
-						    <h5 class="card-title">Online Admission System</h5>
-						    <p class="card-text date">Jul 2015 – Oct 2016</p>
-						    <p class="card-text technology">PHP, Javascript, MySQL, Bootstrap</p>
-						    <p class="card-text desc">University online admission system with focus on object oriented concepts and raw MVC pattern.</p>
-						    <a target="_blank" href="https://github.com/ahmed-dinar/Online-Admission-System">
-						    	<i class="fa fa-github" aria-hidden="true"></i>
-						    </a>
-						  </div>
-						</div>
-					</div>
-				</div>
-
-
-				<div class="row">
-					<div class="col d-flex justify-content-center">
-						<div class="card project-card">
-						  <div class="card-body">
-						    <h5 class="card-title">Meal Management System</h5>
-						    <p class="card-text date">Sep 2014 – Mar 2015</p>
-						    <p class="card-text technology">JAVA, SQLite</p>
-						    <p class="card-text desc">A desktop app for mess admin to keep track of monthly users & their individual meal expenditure.</p>
-						    <a target="_blank" href="https://github.com/ahmed-dinar/Meal-Management-System">
-						    	<i class="fa fa-github" aria-hidden="true"></i>
-						    </a>
-						  </div>
-						</div>
-					</div>
-
-					<div class="col d-flex justify-content-center">
-						<div class="card project-card">
-						  <div class="card-body">
-						    <h5 class="card-title">Bus Tracker</h5>
-						    <p class="card-text date">Jun 2016 – Jun 2016</p>
-						    <p class="card-text technology">Android, PHP</p>
-						    <p class="card-text desc">An android application to track another phone on a bus and live update in google maps.</p>
-						    <a target="_blank" href="https://github.com/ahmed-dinar/JUSTBusTrackerUpdater">
-						    	<i class="fa fa-github" aria-hidden="true"></i>
-						    </a>
-						  </div>
-						</div>
-					</div>
-
-					<div class="col d-flex justify-content-center">
-						<div class="card project-card">
-						  <div class="card-body">
-						    <h5 class="card-title">Sudoku Game</h5>
-						    <p class="card-text date">Aug 2014 – Sep 2014</p>
-						    <p class="card-text technology">C++, ncurses</p>
-						    <p class="card-text desc">A hard coded low level sudoku game in cli.</p>
-						    <a target="_blank" href="https://github.com/ahmed-dinar/sudoku-game">
-						    	<i class="fa fa-github" aria-hidden="true"></i>
-						    </a>
-						  </div>
-						</div>
-					</div>
-				</div>
-
 
 			</div>
 		</div>
@@ -352,7 +198,7 @@ ga('send', 'pageview');
 		<div class="footer p-2">
 			<div class="text-center">
 				Site powered by github pages<br>
-				© 2018 Ahmed Dinar. All rights reserved.
+				© 2019 Ahmed Dinar. All rights reserved.
 			</div>
 		</div>
 
