--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
       <div class="page-section" style="height: 100vh;">
         <div class="container-fluid">
           <div class="text-center mt-5">
-            <img
+            <!-- <img
               src="img/me.jpg"
               class="selfie"
               class="rounded mx-auto d-block"
               alt="..."
-            />
+            /> -->
             <h2 class="whoami">Ahmed Dinar</h2>
             <div class="myself"></div>
           </div>
