--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
 
             <a
               class="mr-3 tips"
+              title="LeetCode"
+              target="_blank"
+              href="https://leetcode.com/ahmeddinar"
+            >
+              <img src="img/leetcode.png" class="icon" />
+            </a>
+
+            <a
+              class="mr-3 tips"
               title="Codeforces"
               target="_blank"
               href="http://codeforces.com/profile/Ahmed_Dinar"
