--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               class="mr-3 tips"
               title="UVa OJ"
               target="_blank"
-              href="http://uhunt.onlinejudge.org/id/381603"
+              href="https://uhunt.onlinejudge.org/id/381603"
             >
               <img src="img/uva.png" width="19" height="18" />
             </a>
